{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 30,
  "lineage": "8194a3f1-284c-2713-cd85-66cd51bd33d0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-11T02:18:57.600-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/snappy-nature-410321/global/firewalls/nginx-firewall",
            "log_config": [],
            "name": "nginx-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/global/networks/my-custom-mode-network",
            "priority": 1000,
            "project": "snappy-nature-410321",
            "self_link": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/global/firewalls/nginx-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-11T02:18:56.695-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/snappy-nature-410321/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/global/networks/my-custom-mode-network",
            "priority": 1000,
            "project": "snappy-nature-410321",
            "self_link": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rocky-linux-cloud/global/images/rocky-linux-8-v20231212",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/zones/asia-northeast1-a/disks/rockey-nginx-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/snappy-nature-410321/zones/asia-northeast1-a/instances/rockey-nginx-vm",
            "instance_id": "5250795640752078407",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "D__humz2KwI=",
            "metadata_startup_script": "sudo yum update; sudo yum -y install nginx; sudo systemctl start nginx; sudo systemctl enable nginx",
            "name": "rockey-nginx-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.243.118.115",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/global/networks/my-custom-mode-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/regions/asia-northeast1/subnetworks/my-custom-subnet",
                "subnetwork_project": "snappy-nature-410321"
              }
            ],
            "project": "snappy-nature-410321",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/zones/asia-northeast1-a/instances/rockey-nginx-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "asia-northeast1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/snappy-nature-410321/global/networks/my-custom-mode-network",
            "mtu": 1460,
            "name": "my-custom-mode-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6864504129049493141",
            "project": "snappy-nature-410321",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/global/networks/my-custom-mode-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-11T02:18:57.914-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/snappy-nature-410321/regions/asia-northeast1/subnetworks/my-custom-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-custom-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "snappy-nature-410321",
            "purpose": "PRIVATE",
            "region": "asia-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/snappy-nature-410321/regions/asia-northeast1/subnetworks/my-custom-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}